Added support for 1.0.0 and 1.1.0 versions

--- a/examples/converter.html
+++ b/examples/converter.html
@@ -127,11 +127,11 @@
   </div>
   <div id="texts-container">
     <div class="text-container">
-      <label for="raw">Input raw <span id="version"></span></label>
+      <label for="raw">Input raw</label>
       <textarea id="raw" name="raw" rows="30"></textarea>
     </div>
     <div class="text-container">
-      <label for="parsed">Output parsed</label>
+      <label for="parsed">Output parsed <span id="version"></span></label>
       <textarea id="parsed" name="parsed" rows="30"></textarea>
     </div>
   </div>
